# ChangeLog for www-client/links
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/links/ChangeLog,v 1.207 2015/06/04 14:46:56 radhermit Exp $

  04 Jun 2015; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove myself as a maintainer.

*links-2.9-r1 (04 Jun 2015)

  04 Jun 2015; Patrice Clement <monsieurp@gentoo.org> +links-2.9-r1.ebuild,
  links-2.8-r1.ebuild:
  Remove useless nonfatal function call when creating documentation with dodoc.
  Fix bug 551196.

  20 May 2015; Patrice Clement <monsieurp@gentoo.org> metadata.xml:
  Add myself to the maintainers list.

*links-2.9 (06 Jan 2015)

  06 Jan 2015; Tim Harder <radhermit@gentoo.org> +links-2.9.ebuild:
  Version bump.

  07 Feb 2014; Chris Reffett <creffett@gentoo.org> metadata.xml:
  Remove unused USE description

  07 Feb 2014; Tim Harder <radhermit@gentoo.org> -links-2.7.ebuild,
  -links-2.8.ebuild:
  Remove insecure versions.

  12 Jan 2014; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for ia64, wrt bug #493138

  29 Dec 2013; Markus Meier <maekke@gentoo.org> links-2.8-r1.ebuild:
  arm stable, bug #493138

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for sparc, wrt bug #493138

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for x86, wrt bug #493138

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for alpha, wrt bug #493138

  22 Dec 2013; Pacho Ramos <pacho@gentoo.org> links-2.8-r1.ebuild:
  amd64 stable, bug #493138

  22 Dec 2013; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for ppc64, wrt bug #493138

  21 Dec 2013; Agostino Sarubbo <ago@gentoo.org> links-2.8-r1.ebuild:
  Stable for ppc, wrt bug #493138

  19 Dec 2013; Jeroen Roovers <jer@gentoo.org> links-2.8-r1.ebuild:
  Stable for HPPA (bug #493138).

*links-2.8-r1 (04 Oct 2013)
