@@ -1,4 +1,2 @@
 DIST links-2.8.tar.bz2 4102643 SHA256 7950da386fa2014d75edc23abfaeed1b1f171ebc73bf0f557352948f12390096 SHA512 e6325be0bb81a9f4dc602f9c05150ebc3c4e16373767c284c02a87bd6b89b9a28ff409c175695542277faa361b71151c5c619135f36a59a04558fc3426c4b30a WHIRLPOOL d5233857bb057279b54883fc9026b5a35e22116ba9f9bb00971872d8a4a658c9fc20b765abd50328c5f1e835ab03e32f9432115671a74c729510d46b53f5d0eb
-DIST links-2.9.tar.bz2 4111393 SHA256 4360ead54d5f41da16b2f4c0033317ca775f40c1e658a29e9e7f8ce4bc23878f SHA512 386f53e8a8eac78b5f1a85277d449f2cc23e96dbc505c776fa5123c3c4ee34916c9da867766849fb71ff7701df161bd1906a34468bd9c31183abdce1d03819a7 WHIRLPOOL b3f4e88df0df05c20c8915ebb30b81aa0aef519ef09fff0f6528c787174adcd003b68b2374851b7b37d4329ea6b4766f6a2a6145703a1d8ce338dbaf1a57dab6
 DIST links2_2.8-1.debian.tar.gz 12121 SHA256 878529c4f93c934c1821edc3576ca6219bc4018f4e29866d6ffa469681a0bd80 SHA512 134fb292c88ec4d36529886d0e5d12083b773f38b89cb90b471b5f6b11d7f8d990de0a57ade5eb5f887cf1c4398687a6e81aed4a660959e81219c675c1de6af2 WHIRLPOOL e9c362de5874ca8de96a2ef184c81e40fa365e9d4e20c4a902845749946a438060ef2784e87972d40c459d4979e0e0ffc8158a5dcab1e02fc3980413c79edfc4
-DIST links2_2.9-2.debian.tar.xz 12708 SHA256 ec074c302da1cd7410a8af3414e2b600653e89ad874937deb37f00dd98428a55 SHA512 9663145a1ec5de7b17b6805d2051a6259c2a80502b7c9742d265863a961dba76caff170af9088bbc9ff4b0353a8d2fba3e87f67d7c99df2e91ff7d919d3c9964 WHIRLPOOL 505a8c6e9af35161ef4430f5b7f73027d615e9d87b575ea382ed2ab235388bc6df29771be1b0d736d1d91e99e2e17a461923e6415cf63fe9688ab376afc9d281
