@@ -1,6 +1,11 @@
 # ChangeLog for www-client/links
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/links/ChangeLog,v 1.207 2015/06/04 14:46:56 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/links/ChangeLog,v 1.208 2015/07/22 14:58:36 monsieurp Exp $
+
+*links-2.10 (22 Jul 2015)
+
+  22 Jul 2015; Patrice Clement <monsieurp@gentoo.org> +links-2.10.ebuild:
+  Version bump.
 
   04 Jun 2015; Tim Harder <radhermit@gentoo.org> metadata.xml:
   Remove myself as a maintainer.
